tests/__snapshots__/api-toBeString.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeString: stderr 1`] = `
"Error: Type 'void' is not 'string'.

  12 |   expect(returnsString()).type.toBeString();
  13 | 
> 14 |   expect(returnsVoid()).type.toBeString();
     |                              ^
  15 | });
  16 | 
  17 | test("is NOT string?", () => {

       at ./__typetests__/toBeString.test.ts:14:30 ❭ is string?

Error: Type 'string' is 'string'.

  18 |   expect(returnsVoid()).type.not.toBeString();
  19 | 
> 20 |   expect(returnsString()).type.not.toBeString();
     |                                    ^
  21 | });
  22 | 

       at ./__typetests__/toBeString.test.ts:20:36 ❭ is NOT string?

"
`;

exports[`toBeString: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeString.test.ts
  × is string?
  × is NOT string?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
